# orion-agent-runtime

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/orion_agent_runtime/: config.py  llm_provider.py  main.py
src/orion_agent_runtime/audit/: audit_log.py
src/orion_agent_runtime/benchmark/case001/: dataset.py  evaluator.py  report.py  runner.py
src/orion_agent_runtime/benchmark/case002/: intent_dataset.py  intent_evaluator.py  intent_report.py  intent_router.py  intent_runner.py
src/orion_agent_runtime/bus/: __init__.py  event.py  event_bus.py
src/orion_agent_runtime/capabilities/: __init__.py  base.py
src/orion_agent_runtime/capabilities/browser/: __init__.py  capability.py  extractor.py  mock.py
src/orion_agent_runtime/core/: __init__.py  answer_synthesizer.py  cost_guardrail.py  executor.py  goal_evaluator.py  idempotency.py  models.py  planner.py  react_loop.py  reviewer.py  skill_executor.py  skill_loader.py  stagnation_detector.py  storage.py  workflow.py
src/orion_agent_runtime/kernel/: __init__.py  kernel.py
src/orion_agent_runtime/knowledge/: loader.py  retriever.py
src/orion_agent_runtime/mcp/: mcp_config.py  mcp_manager.py
src/orion_agent_runtime/memory/: __init__.py  memory.py  memory_context.py  memory_schema.py  memory_store.py  memory_summarizer.py
src/orion_agent_runtime/reporter/: __init__.py
src/orion_agent_runtime/runtime/: __init__.py  agent_runtime.py  executor_async.py
src/orion_agent_runtime/safety/: __init__.py  guardrails.py
src/orion_agent_runtime/scheduler/: __init__.py  scheduler.py  task.py
src/orion_agent_runtime/server/: __init__.py
src/orion_agent_runtime/tools/: __init__.py  browser_tools.py  knowledge_tool.py  math_tool.py  registry.py
src/orion_agent_runtime/trace/: metrics_collector.py  run_inspector.py  trace_inspector.py
src/orion_agent_runtime/utils/: normalize.py
src/orion_agent_runtime/world/: __init__.py  state.py  world_manager.py
tests/: test_agent_runtime.py  test_audit_log.py  test_browser_extractor.py  test_browser_tools.py  test_bus.py  test_capabilities.py  test_convergence_control.py  test_core.py  test_goal_verification.py  test_guardrails.py  test_idempotency.py  test_memory_layers.py  test_react_loop.py  test_scheduler.py  test_world.py
verification/: ACCEPTANCE_REPORT.md  README.md  VERIFICATION_CHECKLIST.md  verify.py  verify_e2e.py
(+12 files in other folders)
