[project]
name = "orion-agent-runtime"
version = "0.1.0"
description = "A Python runtime package for Orion agent projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "Your Name", email = "you@example.com" } ]
# mcp 由 mcp_manager.py 直接导入，httpx 为 openai/mcp 的传递依赖显式声明以保证可装
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "PyYAML>=6.0",
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "black", "isort"]
# V2 浏览器能力（真实 Playwright 实现，ORION_BROWSER_MODE=real 时启用）
# 安装后还需运行 `playwright install chromium` 下载浏览器
browser = ["playwright>=1.40"]

[project.scripts]
orion = "orion_agent_runtime.main:main"

[project.urls]
"Source" = "https://github.com/your-org/orion-agent-runtime"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
